# cpp-basic

./: .gitignore
homework-1/: 1-if-else.cpp  2-if-in-if.cpp  3-while.cpp
homework-10-11/: Makefile  Stack.hpp  main.cpp
homework-13/: main.cpp
homework-14/: main.cpp
homework-15/: CMakeLists.txt  Makefile
homework-15/resources/: books.txt  member_book.txt  members.txt
homework-15/src/: DataBase.hpp  LibApplication.cpp  LibApplication.hpp  LibService.cpp  LibService.hpp  Settings.hpp  main.cpp
homework-15/src/Menu/: BaseMenu.cpp  BaseMenu.hpp  MainMenu.cpp  MainMenu.hpp
homework-15/src/Models/: Book.hpp  Booking.hpp  Member.hpp
homework-15/src/Utils/: String.hpp  Table.hpp
homework-18/: CMakeLists.txt  main.cpp  profile.hpp
homework-2/: main.cpp
homework-3/: main.cpp
homework-4/: main.cpp  my_math.cpp  my_math.hpp
homework-5/: Makefile  main.cpp  my_math.cpp  my_math.hpp  shapes.hpp
homework-6/: Makefile  main.cpp
homework-7/: Makefile  main.cpp
homework-7/Game/: GameBoard.cpp  GameBoard.hpp  GameBoardRender.cpp  GameBoardRender.hpp  TicTacToeGame.cpp  TicTacToeGame.hpp
homework-7/Game/AI/: AIStrategy.hpp  MinMaxStrategy.cpp  MinMaxStrategy.hpp  RandomStrategy.cpp  RandomStrategy.hpp
homework-7/Game/Controllers/: AIController.cpp  AIController.hpp  PlayerController.hpp  UserController.cpp  UserController.hpp
homework-8/: main.cpp
homework-9/: main.cpp
